2006-01-31	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Depend on GLib >= 2.6.4 and Gtk+ >= 2.6.0.
	* configure.in.in, Makefile.am, icons/: Add preferred applications icon.
	* configure.in.in, Makefile.am, exo-helper/, NEWS: Import exo-helper
	  framework based on the helper framework found in Terminal. Bug #1368.
	* exo/exo-execute.{c,h}, exo/exo-url.{c,h}, exo/Makefile.am, exo/exo.h,
	  exo/exo.symbols: Add exo-url and exo-execute modules, which provide
	  a consistent frontend to the helper framework.
	* configure.in.in, Makefile.am, exo-open/: Add exo-open utility
	  program, which simply calls appropriate functions in libexo.
	* docs/reference/: Update the API documentation.
	* po/POTFILES.in: Add new files.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2006-01-25	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Drop G_DISABLE_DEPRECATED completely. This fixes
	  bug #1379.
	* exo/exo.h: Make sure i18n stuff is setup properly, so people with
	  older Xfce versions can still build and run Thunar. This fixes
	  bug #1341.

2006-01-23	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gtk-extensions.c(exo_gtk_radio_action_set_current_value):
	  If no action matches the new value, the radio group will have no
	  active action afterwards.

2006-01-23	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.3svn.

2006-01-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.2alpha.
	* configure.in.in: Bump current library interface version to 1, to make
	  sure certain Linux distributions don't run into trouble when including
	  exo pre-releases.
	* NEWS: Update some news items for the alpha release.
	* THANKS: Update translator credits.
	* po/*.po, po/libexo-0.3.pot: Update translations.

2006-01-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Draw keyfocus using the same semantics as
	  GtkTreeView. This finally fixes bug #1321.
