@@ -81,8 +81,8 @@ dnl ***************************************
 dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
-AC_CHECK_HEADERS([assert.h errno.h fcntl.h libintl.h locale.h math.h md5.h \
-                  regex.h string.h sys/resource.h sys/stat.h sys/time.h \
+AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
+                  md5.h regex.h string.h sys/resource.h sys/stat.h sys/time.h \
                   sys/types.h time.h])
 
 dnl ************************************
